Chat basically working

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,4 @@ ATLAS_URI=mongodb+srv://spoc:spoc@cluster0.eirag.mongodb.net/letsdb?retryWrites=
 MONGO_CONTAINER_URL=mongodb://mongo:27017/spocdb
 MONGO_LOCAL=mongodb://localhost:27017/spocdb
 PORT=3000
+WS_PORT=3001
