--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@types/bcrypt-nodejs": "^0.0.31",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/ws": "^8.5.14",
     "typescript": "^5.7.3"
   },
   "dependencies": {
@@ -26,6 +27,8 @@
     "jwt-simple": "^0.5.6",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "url": "^0.11.4",
+    "ws": "^8.18.0"
   }
 }
